--- a/webapp/completeprofile/templates/newtemplate.html
+++ b/webapp/completeprofile/templates/newtemplate.html
@@ -1,7 +1,21 @@
-<sm-verification-rubric name="'Candidate'" profiletype="'Developer'" outcome="b">
-</sm-verification-rubric>
-<span flex></span>
-<p>{{listid}}</p>
-<span flex></span>
-<md-button ng-click=answer(b,id)>Close
-</md-button>
+<md-dialog style="width:1000px; height:500px">
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <h2 layout-align="center center">Verification</h2>
+            <span flex></span>
+            <md-button class="md-icon-button" ng-click="cancel()">
+                <md-icon aria-label="Close dialog">close</md-icon>
+            </md-button>
+        </div>
+    </md-toolbar>
+    <sm-verification-rubric name="typename" outcome="b" remarks="remarks">
+    </sm-verification-rubric>
+    <div layout="row">
+        <span flex></span>
+        <md-button ng-click=answer(b,id,remarks)>Ok
+        </md-button>
+        <md-button ng-click="cancel()">
+            Cancel
+        </md-button>
+    </div>
+</md-dialog>
