--- a/webapp/jobsearch/templates/jobsearchhome.html
+++ b/webapp/jobsearch/templates/jobsearchhome.html
@@ -6,5 +6,37 @@
 </div>
 <span>{{message}}</span>
 <div>
+    <div ng-repeat="job in jobs">
+        <job-card data='{"jobID":job.jobID,"employerID":job.employer.employerID}'>
+            <md-menu>
+                <md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
+                    <md-icon class="material-icons">more horiz</md-icon>
+                </md-button>
+                <md-menu-content width="4">
+                    </menu-content>
+                    <md-menu-item>
+                        <md-button ui-sref="index.jobProfileView({jobID:'{{job.jobID}}',employerID:'{{job.employer.employerID}}'})">
+                            View profile
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button>
+                            Verify profile
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button>
+                            Show Similar profiles
+                        </md-button>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-button>
+                            Add to Circles
+                        </md-button>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </job-card>
+    </div>
     <div ui-view="results"></div>
 </div>
