--- a/webapp/candidateregistration/templates/candidateregistration.html
+++ b/webapp/candidateregistration/templates/candidateregistration.html
@@ -1,4 +1,4 @@
-<div layout layout-align="center center">
+<div layout layout-align="center center" md-pading>
 	<md-card flex="50" md-padding>
 
 		<md-card-title layout layout-align="center center">
@@ -65,7 +65,7 @@
 				</div>
 
 
-				<div layout="row" layout-xs="column">
+				<!-- <div layout="row" layout-xs="column">
 					<div>
 						<md-input-container md-no-float class="md-block">
 							<label>Password</label>
@@ -90,7 +90,7 @@
 							</md-input-container>
 						</div>
 
-					</div>
+					</div> -->
 
 					<div>
 						<md-input-container md-no-float>
