--- a/webapp/coordinatorregistration/templates/coordinatorregistrationform.html
+++ b/webapp/coordinatorregistration/templates/coordinatorregistrationform.html
@@ -53,6 +53,27 @@
                         <div ng-message="required">Please enter your location</div>
                     </div>
                 </md-input-container>
+                <md-input-container md-no-float class="md-block" layout="row">
+                    <md-icon class="material-icons"> perm_identity</md-icon>
+                    <label>Select Profession</label>
+                    <md-select ng-model="coordinator.profession" value={{coordinator.profession}}>
+                        <md-option value='Dancer'>
+                            Dancer
+                        </md-option>
+                        <md-option value="muscian">
+                            Muscian
+                        </md-option>
+                        <md-option value="Painter">
+                            Painter
+                        </md-option>
+                        <md-option value="it">
+                            IT
+                        </md-option>
+                    </md-select>
+                    <div ng-messages="registrationform.profession.$error">
+                        <div ng-message="required">Please select a profession.</div>
+                    </div>
+                </md-input-container>
             </div>
             <div layout="row">
                 <md-input-container md-no-float class="md-block" layout="row">
@@ -87,7 +108,7 @@
                 <md-button type="submit" class="md-primary md-raised">
                     Register
                 </md-button>
-                <md-button class="button" ng-click="reset()">Reset</md-button>
+                <!-- <md-button class="button" ng-click="reset()">Reset</md-button> -->
             </div>
         </form>
     </md-content>
