--- a/webapp/home/css/style.css
+++ b/webapp/home/css/style.css
@@ -1,3 +1,11 @@
+/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);*/
+
+body {
+    /*font-family: "Lato";*/
+    font-family: "Open Sans";
+    color: #666;
+}
+
 .toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
     color: white;
 }
