--- a/webapp/auth/templates/signinview.html
+++ b/webapp/auth/templates/signinview.html
@@ -18,7 +18,7 @@
                     <md-button class="md-raised md-primary" type="submit" aria-label="Sign-in">Sign-in</md-button>
                     <a class="md-accent-color" href="#">Forgot Password?</a>
                     <md-divider class="inset"></md-divider>
-                    <md-button class="md-accent-color md-default-theme" ui-sref="registercoordinator">Register Coordinator</md-button>
+                    <a class="md-accent-color md-default-theme" ui-sref="registercoordinator">Register Coordinator</a>
                 </form>
                 <div>
                     <p class="textfont">{{errmsg}}</p>
