--- a/webapp/coordinatorregistration/templates/coordinatorregistrationform.html
+++ b/webapp/coordinatorregistration/templates/coordinatorregistrationform.html
@@ -108,6 +108,10 @@
                 <md-button type="submit" class="md-primary md-raised">
                     Register
                 </md-button>
+                <p ng-model="status" style="color:red">{{status}}</p>
+            </div>
+            <div layout-align="start">
+                <a ui-sref="index">SIGN_IN</a>
                 <!-- <md-button class="button" ng-click="reset()">Reset</md-button> -->
             </div>
         </form>
