--- a/webapp/home/css/style.css
+++ b/webapp/home/css/style.css
@@ -1,9 +1,22 @@
-/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);*/
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3bO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
+}
 
 body {
-    /*font-family: "Lato";*/
-    font-family: "Open Sans";
-    color: #666;
+    font-family: "Lato thin", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "Verdana", "sans-serif";
+    font-size: auto;
+    margin: auto;
+    /*background-color: #fff;*/
+    background-color: white;
+}
+
+.transparent {
+    /*background-color: transparent;*/
+    /*opacity: 0.7;
+*/
 }
 
 .toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
@@ -14,17 +27,19 @@ body {
     background-color: #999999;
 }
 
-.load {
-    background: url("../images/loginImg.jpg") no-repeat;
-    background-size: cover;
-}
 
-.login-form-wrapper {
+/*.load {
+    background: url("../images/signin.jpg") no-repeat;
+    background-size: cover;
+}*/
+
+
+/*.login-form-wrapper {
     background-color: rgb(255, 255, 255);
-}
+}*/
 
 .main {
-    background: url("../images/loginImg.jpg") no-repeat;
+    background: url("../images/signin.jpg") no-repeat;
     background-size: cover;
 }
 
@@ -39,3 +54,17 @@ body {
     padding: 5px;
     /*margin-top: 100px;*/
 }
+
+
+/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);*/
+
+
+/*body {*/
+
+
+/*font-family: "Lato";*/
+
+
+/*    font-family: "Open Sans";
+    color: #666;
+}*/
