--- a/webapp/jobprofile/templates/jobprofilepost.html
+++ b/webapp/jobprofile/templates/jobprofilepost.html
@@ -1,3 +1,6 @@
+<div layout layout-align="center center">
+    <span class="md-display-2">Job Registration</span>
+</div>
 <div layout="row" layout-padding>
     <div flex-gt-xs="20" flex-xs="0"></div>
     <div flex-gt-xs="60" layout="column" flex-xs="100">
