--- a/webapp/home/templates/appbar.html
+++ b/webapp/home/templates/appbar.html
@@ -46,7 +46,7 @@
                                 </div>
                             </md-item-content>
                         </md-list-item>
-                        <md-list-item ui-sref="#">
+                        <md-list-item ui-sref="aboutus">
                             <md-item-content layout="row" layout-align="start center">
                                 <div>
                                     <md-icon class="material-icons">dns</md-icon>
